--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
+	    
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -139,8 +139,8 @@
             <table>
                 <tr>
                     <th>Product</th>
-                    <td>"Solar Garden Light
-"</td>
+                    <td>Solar Lantern Light
+</td>
                 </tr>
                 <tr>
                     <th>Product Code</th>
@@ -156,20 +156,20 @@
                     <td>Width 12cm x Length 12cm x Height 18.5cm/27cm</td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td></td>
+                    <th>MOQ</th>
+                    <td>19428</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
-                    <td </td>
+                    <td>0.31 Kg</td>
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>pcs</td>
+                    <td>Pcs</td>
                 </tr>
                 <tr>
                     <th>Carton Size</th>
-                    <td>Width  x Length  x Height </td>
+                    <td>Width 26.5cm x Length 39cm x Height 41cm</td>
                 </tr>
                 <tr>
                     <th>Carton Quantity</th>
@@ -177,31 +177,31 @@
                 </tr>
                 <tr>
                     <th>Carton CBM</th>
-                    <td></td>
+                    <td>0.042</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td></td>
+                    <th>20 Ft Container Quantity</th>
+                    <td>8004</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td></td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>17148</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td></td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>19428</td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 2.99</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
-                    <td></td>
+                    <td>Xiamen, China</td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <th>Other Details </th>
+                    <td>Bulk Packed, Base Label</td>
                 </tr>
             </table>
         </div>
