--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
                 </tr>
                 <tr>
                     <th>Other Details </th>
-                    <td>Bulk Packed, Base Label</td>
+                    <td>Bulk packed, Base Label included as below infos：</br>
+ Solar panel:Amorphous 45x45mm</br>
+ LED:1pc warm white LED Battery:1pc AA 1.2V 300mAh NI-MH Rechargeable</br>
+ Switch:ON/OFF(Not Timer)</br>
+ IP44</td>
                 </tr>
             </table>
         </div>
